# yuri

./: Pipfile  README.md  main.py  pyproject.toml  yuri.json  yuri.yaml
tests/: test_yuri.py
yuri/: __init__.py  config.py  eyes.py  input.py  lights.py  listener.py  main.py  servos.py  speaker.py  tensor_listen.py  textgen.py  yuri.py
