[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yuri"
author = "Matt White"
author-email = "mail@matt-w.net"
home-page = "https://matt-w.net"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
description-file = "README.md"

[project.urls]
Home = "https://github.com/matt-fff/yuri"
